fixed z index issue with header on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,7 +82,7 @@ header {
   display: flex;
   flex-direction: column;
   position: fixed;
-  z-index: 0;
+  z-index: 1;
   width: 100%;
 }
 
